==> diego-tag/ducted-fan/relazione/precedente/chapter3-SOFTWARE/codeFiles/vl53l1_platform.c <==
#include <stdio.h>      // sprintf(), vsnprintf(), printf()
#include <stdint.h>
#include <string.h>     // strncpy(), strnlen()
#include "stm32h7xx_hal.h"
#define snprintf _snprintf
#include "vl53l1_platform.h"
#include "vl53l1_platform_log.h"
	#include "vl53l1_register_strings.h"
	#define VL53L1_get_register_name(a,b)
#define  VL53L1_COMMS_CHUNK_SIZE  56
#define  VL53L1_COMMS_BUFFER_SIZE 64
#define  GPIO_XSHUTDOWN GPIO_PIN_14
#define  GPIO_POWERENABLE GPIO_PIN_12
#define  GPIO_INTERRUPT GPIO_PIN_7
#define HIGH  1
#define LOW 0
#define ERROR_TEXT_LENGTH 50
#define STANDARD_MSG_LENGTH 45
#define trace_print(level, ...) \
	_LOG_TRACE_PRINT(VL53L1_TRACE_MODULE_PLATFORM, \
	level, VL53L1_TRACE_FUNCTION_NONE, ##__VA_ARGS__)
#define trace_i2c(...) \
	_LOG_TRACE_PRINT(VL53L1_TRACE_MODULE_NONE, \
	VL53L1_TRACE_LEVEL_NONE, VL53L1_TRACE_FUNCTION_I2C, ##__VA_ARGS__)

VL53L1_Error VL53L1_CommsInitialise(
	VL53L1_Dev_t *pdev,
	uint8_t       comms_type,
	uint16_t      comms_speed_khz)
{
	VL53L1_Error status = VL53L1_ERROR_NONE;
	char comms_error_string[ERROR_TEXT_LENGTH];

	SUPPRESS_UNUSED_WARNING(pdev);
	SUPPRESS_UNUSED_WARNING(comms_speed_khz);

	global_comms_type = comms_type;

	if(global_comms_type == VL53L1_I2C)
	{
		if (RANGING_SENSOR_COMMS_Init_CCI(0, 0, 0) != HAL_I2C_STATE_READY)
		{
			RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string);
			status = VL53L1_ERROR_CONTROL_INTERFACE;
		}
	}
	else if(global_comms_type == VL53L1_SPI)
	{

		/*if ((CP_STATUS)RANGING_SENSOR_COMMS_Init_SPI_V2W8(0, 0, 0) != CP_STATUS_OK)
		{
			RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string);
			trace_i2c("VL53L1_CommsInitialise: RANGING_SENSOR_COMMS_Init_SPI_V2W8() failed\n");
			trace_i2c(comms_error_string);
			status = VL53L1_ERROR_CONTROL_INTERFACE;
		}*/
	}
	else
	{

		status = VL53L1_ERROR_CONTROL_INTERFACE;
	}

	return status;
}

VL53L1_Error VL53L1_CommsClose(
	VL53L1_Dev_t *pdev)
{
	VL53L1_Error status = VL53L1_ERROR_NONE;
	char comms_error_string[ERROR_TEXT_LENGTH];

	SUPPRESS_UNUSED_WARNING(pdev);

	if(global_comms_type == VL53L1_I2C)
	{
		if(RANGING_SENSOR_COMMS_Fini_CCI() != HAL_OK)
		{
			RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string);

			status = VL53L1_ERROR_CONTROL_INTERFACE;
		}
	}
	else if(global_comms_type == VL53L1_SPI)
	{
		/*if((CP_STATUS)RANGING_SENSOR_COMMS_Fini_SPI_V2W8() != CP_STATUS_OK)
		{
			RANGING_SENSOR_COMMS_Get_Error_Text(comms_error_string);
			trace_i2c("VL53L1_CommsClose: RANGING_SENSOR_COMMS_Fini_SPI_V2W8() failed\n");
			trace_i2c(comms_error_string);
			status = VL53L1_ERROR_CONTROL_INTERFACE;
		}*/
	}
	else
	{

		status = VL53L1_ERROR_CONTROL_INTERFACE;
	}

	return status;
}

VL53L1_Error VL53L1_WriteMulti(
	VL53L1_Dev_t *pdev, //puntatore che contiene qualisasi info
	uint16_t      index, // Indice del registro a cui scrivere
	uint8_t      *pdata, //puntatori ai dati da scrivere
	uint32_t      count) //numero di byte da scrivere
{
	VL53L1_Error status         = VL53L1_ERROR_NONE;
	uint32_t     position       = 0;
	uint32_t     data_size      = 0;

	char   comms_error_string[ERROR_TEXT_LENGTH];

	_LOG_STRING_BUFFER(register_name);
	_LOG_STRING_BUFFER(value_as_str);

	if(global_comms_type == VL53L1_I2C)
	{
		for(position=0; position<count; position+=VL53L1_COMMS_CHUNK_SIZE)
		{
			if (count > VL53L1_COMMS_CHUNK_SIZE)
			{
				if((position + VL53L1_COMMS_CHUNK_SIZE) > count)
				{
					data_size = count - position;
				}
				else
				{
					data_size = VL53L1_COMMS_CHUNK_SIZE;
				}
			}
			else
			{
				data_size = count;
			}


			if (status == VL53L1_ERROR_NONE)
			{
				if( RANGING_SENSOR_COMMS_Write_CCI(
								pdev->i2c_slave_address,
								0,
								index+position,
								pdata+position,
								data_size) != HAL_OK)
				{
					status = VL53L1_ERROR_CONTROL_INTERFACE;
				}
			}
		}

	}
	return status;
}

VL53L1_Error VL53L1_ReadMulti(
	VL53L1_Dev_t *pdev, //puntaore alla struct principale di gestione
	uint16_t      index, //registro da dove leggere
	uint8_t      *pdata, //dove salvare le cose lette
	uint32_t      count) //numero di byte da leggere
{
	VL53L1_Error status         = VL53L1_ERROR_NONE;
	uint32_t     position       = 0;
	uint32_t     data_size      = 0;

	char   comms_error_string[ERROR_TEXT_LENGTH];

	_LOG_STRING_BUFFER(register_name);
	_LOG_STRING_BUFFER(value_as_str);

	if(global_comms_type == VL53L1_I2C)
	{	//come per il caso precedente la lettura avviene in semplici blocchi di dati ?
		for(position=0; position<count; position+=VL53L1_COMMS_CHUNK_SIZE)
		{
			if(count > VL53L1_COMMS_CHUNK_SIZE)
			{
				if((position + VL53L1_COMMS_CHUNK_SIZE) > count)
				{
					data_size = count - position;
				}
				else
				{
					data_size = VL53L1_COMMS_CHUNK_SIZE;
				}
			}
			else
				data_size = count;

			if(status == VL53L1_ERROR_NONE)
			{
				if( RANGING_SENSOR_COMMS_Read_CCI(
								pdev->i2c_slave_address,
								0,
								index+position,
								pdata+position,
								data_size) != HAL_OK )
				{
					status = VL53L1_ERROR_CONTROL_INTERFACE;
				}
			}
		}
	}
	return status;
}

VL53L1_Error VL53L1_WaitUs(
	VL53L1_Dev_t *pdev,
	int32_t       wait_us)
{
	VL53L1_Error status         = VL53L1_ERROR_NONE;

	uint32_t wait_us_milliseconds = wait_us/1000;
	HAL_Delay(wait_us_milliseconds);

	return status;
}

VL53L1_Error VL53L1_GetTickCount(
	uint32_t *ptick_count_ms)
{

	/* Returns current tick count in [ms] */

	VL53L1_Error status  = VL53L1_ERROR_NONE;

	*ptick_count_ms = HAL_GetTick();

	char msg_GetTick[STANDARD_MSG_LENGTH];
	sprintf(msg_GetTick,"TickSTM32H745ZIQ : %5d ms\r\n", ptick_count_ms);
	//HAL_UART_Transmit(&huart3, (uint8_t*)msg_GetTick, strlen(msg_GetTick), HAL_MAX_DELAY);

	return status;

}
